Incorrect tmp register passed to MacroAssembler::load_mirror()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b15

        On x86, MacroAssembler::load_mirror() defaults to using rscratch2 as tmp register, unless something else is specified. In TemplateInterpreterGenerator::generate_native_entry() we call load_mirror(), but the rscratch2 register is already in use in this context, which obviously leads to problems. This is not a performance critical path, so we should just pass noreg as the tmp register.

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Per Liden (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: