8202978: Incorrect tmp register passed to MacroAssembler::load_mirror()

Reviewed-by: kvn, coleenp